--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.sonatype.oss</groupId>
@@ -22,7 +23,7 @@
   </modules>
 
   <properties>
-    <jbehave.core.version>3.9.1</jbehave.core.version>
+    <jbehave.core.version>3.9.5</jbehave.core.version>
     <jbehave.site.version>3.3</jbehave.site.version>
     <jbehave.webapp.name>jbehave-web-runner</jbehave.webapp.name>
     <jdk.version>1.5</jdk.version>
@@ -123,7 +124,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.3.2</version>
+          <version>3.2</version>
           <configuration>
             <source>${jdk.version}</source>
             <target>${jdk.version}</target>
@@ -132,12 +133,12 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-enforcer-plugin</artifactId>
-          <version>1.0.1</version>
+          <version>1.4</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.8.1</version>
+          <version>2.18.1</version>
           <configuration>
             <junitArtifactName>junit:junit</junitArtifactName>
             <includes>
@@ -157,17 +158,17 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-report-plugin</artifactId>
-          <version>2.8.1</version>
+          <version>2.18.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>2.4</version>
+          <version>2.8</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.8</version>
+          <version>2.10.3</version>
           <executions>
             <execution>
               <id>attach-javadoc</id>
@@ -176,6 +177,7 @@
                 <goal>jar</goal>
               </goals>
               <configuration>
+                <failOnError>false</failOnError>
                 <links>
                   <link>http://java.sun.com/j2se/1.5/docs/api</link>
                 </links>
@@ -186,7 +188,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
-          <version>2.1.2</version>
+          <version>2.4</version>
           <executions>
             <execution>
               <id>attach-sources</id>
@@ -200,7 +202,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>2.5</version>
+          <version>2.7</version>
           <configuration>
             <encoding>${resource.encoding}</encoding>
           </configuration>
@@ -208,7 +210,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
-          <version>2.4.1</version>
+          <version>2.5.1</version>
           <configuration>
             <autoVersionSubmodules>true</autoVersionSubmodules>
             <preparationGoals>clean install</preparationGoals>
@@ -220,17 +222,17 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-assembly-plugin</artifactId>
-          <version>2.2.2</version>
+          <version>2.5.3</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-dependency-plugin</artifactId>
-          <version>2.4</version>
+          <version>2.10</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-antrun-plugin</artifactId>
-          <version>1.7</version>
+          <version>1.8</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -240,7 +242,7 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>cobertura-maven-plugin</artifactId>
-          <version>2.5.1</version>
+          <version>2.6</version>
           <configuration>
             <formats>
               <format>html</format>
@@ -262,12 +264,12 @@
         <plugin>
           <groupId>org.codehaus.xsite</groupId>
           <artifactId>xsite-maven-plugin</artifactId>
-          <version>1.2.1</version>
+          <version>1.3</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-war-plugin</artifactId>
-          <version>2.1</version>
+          <version>2.6</version>
           <configuration>
             <warName>${jbehave.webapp.name}</warName>
           </configuration>
@@ -282,7 +284,8 @@
             </webAppConfig>
             <webApp>${project.build.directory}/${jbehave.webapp.name}.war</webApp>
             <connectors>
-              <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+              <connector
+                implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
                 <port>8080</port>
                 <maxIdleTime>60000</maxIdleTime>
               </connector>
@@ -325,7 +328,6 @@
       </modules>
     </profile>
     <profile>
-      <!-- reporting profile: requires mvn 3 -->
       <id>reporting</id>
       <build>
         <plugins>
@@ -401,14 +403,11 @@
     </license>
   </licenses>
 
-  <developers />
-  <contributors />
-
   <scm>
     <connection>scm:git:git://github.com/jbehave/jbehave-web.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/jbehave/jbehave-web.git</developerConnection>
     <url>http://github.com/jbehave/jbehave-web</url>
     <tag>HEAD</tag>
   </scm>
-  
+
 </project>
