--- a/web-selenium/pom.xml
+++ b/web-selenium/pom.xml
@@ -54,13 +54,13 @@
     <dependency>
       <groupId>org.gebish</groupId>
       <artifactId>geb-core</artifactId>
-      <version>0.9.1</version>
+      <version>0.9.1</version> <!-- 0.12.2 -->
       <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.freemarker</groupId>
       <artifactId>freemarker</artifactId>
-      <version>2.3.20</version>
+      <version>2.3.23</version>
       <optional>true</optional>
     </dependency>
     <dependency>
@@ -70,9 +70,9 @@
       <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>com.github.detro.ghostdriver</groupId>
+      <groupId>com.codeborne</groupId>
       <artifactId>phantomjsdriver</artifactId>
-      <version>1.0.4</version>
+      <version>1.2.1</version>
       <exclusions>
         <!-- phantomjsdriver 1.0.4 has a dep on Selenium 2.33 :-(  -->
         <exclusion>
