--- a/web-selenium/pom.xml
+++ b/web-selenium/pom.xml
@@ -29,6 +29,12 @@
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-leg-rc</artifactId>
       <version>${selenium.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.testng</groupId>
+          <artifactId>testng</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.seleniumhq.selenium.fluent</groupId>
