--- a/pom.xml
+++ b/pom.xml
@@ -386,6 +386,15 @@
         </plugins>
       </build>
     </profile>
+    <profile>
+        <id>jdk8</id>
+        <activation>
+            <jdk>[1.8,)</jdk>
+        </activation>
+        <properties>
+            <additionalparam>-Xdoclint:none</additionalparam>
+        </properties>
+    </profile>
   </profiles>
 
   <licenses>
