--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   <groupId>org.jbehave.web</groupId>
   <artifactId>jbehave-web</artifactId>
-  <version>4.0-beta-1</version>
+  <version>4.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>JBehave Web</name>
   <description>JBehave Web provides a web integration layer for Behaviour-Driven Development</description>
@@ -408,7 +408,7 @@
     <connection>scm:git:git://github.com/jbehave/jbehave-web.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/jbehave/jbehave-web.git</developerConnection>
     <url>http://github.com/jbehave/jbehave-web</url>
-    <tag>jbehave-web-4.0-beta-1</tag>
+    <tag>HEAD</tag>
   </scm>
 
 </project>
