--- a/archetypes/web-selenium-groovy-pico-archetype/pom.xml
+++ b/archetypes/web-selenium-groovy-pico-archetype/pom.xml
@@ -4,7 +4,7 @@
  <parent>
     <groupId>org.jbehave.web</groupId>
     <artifactId>jbehave-web-archetypes</artifactId>
-    <version>4.0-SNAPSHOT</version>
+    <version>4.0-beta-1</version>
   </parent>
 
   <artifactId>jbehave-web-selenium-groovy-pico-archetype</artifactId>
